EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==04/17/2010==
Congdar: fix windows compile: warning C4405: 'crc32' : identifier is reserved word
Congdar: fix windows compile: warning C4554: '>>' : check operator precedence for possible error; use parentheses to clarify precedence
Congdar: fix windows compile: warning C4800: 'char *' : forcing value to bool 'true' or 'false' (performance warning)

==04/16/2010==
KLS: (Leere) Melody Fix.
KLS: Other merges from spell branch, some more to come.  Tell me if there are any crashes I only tested it for about 25 minutes.

==04/15/2010==
cavedude (Leere): Increased the number of tradeskill favorites that can be stored client side to 500.
cavedude (Leere): Fixed avgcoin. 
cavedude (renoofturks): Fixes to SK harm touch.
cavedude: Lowered snare movement speed when fleeing to 41% or higher to allow "Snare" to prevent movement at all levels.
gaeorn: multiple login server support in world. protocol to update login server account information from within game. "trusted" field for world accounts in loginserver to limit where account updates can come from. in eqemu_config.xml, use <loginserver1></loginserver1> to specify first of multiple login servers. increment the number to specify additional login servers. NOTE: be sure to replace the <loginserver></loginserver> entry or you will be limited to just one login server. MULTIPLE LOGIN SERVERS WILL NOT WORK WITH MINILOGIN.

Required SQL for loginserver tables:
alter table tblWorldServerRegistration add ServerTrusted integer NOT NULL after ServerAdminID;

==04/12/2010==
Derision: SoD - /who <name>, /whotarget now work.
Derision: Corpses summoned in Shadowrest should no longer decay before you can finish looting them.

==04/11/2010==
Derision: SoD - Corpses should now vanish instantly rather than decay when using /hidecorpse.
Derision: SoD - Players can now see other players buffs in their target window.