@@ -191,6 +191,7 @@
 #define SUSPEND_MINION_SUSPEND		3268	//%1 tells you, 'By your command, master.'
 #define ONLY_SUMMONED_PETS		3269	//3269 This effect only works with summoned pets.
 #define SUSPEND_MINION_FIGHTING		3270    //Your pet must be at peace, first.
+#define TRADESKILL_LEARN_RECIPE		3457	//You have learned the recipe %1!
 #define WHOALL_NO_RESULTS			5029	//There are no players in EverQuest that match those who filters.
 #define PETITION_NO_DELETE			5053	//You do not have a petition in the queue.
 #define PETITION_DELETED			5054	//Your petition was successfully deleted.
